fix: fix the problem with the user registration